added slideshow and changes in about section

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,13 +83,58 @@ body::-webkit-scrollbar {
     scroll-margin: 60px 100px;
 }
 
+
+.titles{
+    font-size: larger;
+    font-weight: 500;
+}
+
+.text{
+    font-size: small;
+    padding-top: 10px;
+}
+
+/*About Section of the page: contains slideshow, text and image*/
 #About {
     margin-top: 60px;
-    background-color:antiquewhite;
-    height: 600px;
+    background-color:rgb(32, 32, 32);
+    height: 100%;
     width: 100%;
 }
 
+#About-content{
+    display: flex;
+    margin: auto;
+    padding: 0px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+#About > div {
+    color: aliceblue;
+}
+
+#About-left{
+    flex: 1;
+    margin: 0px;
+    padding: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    max-width: 1000px;
+}
+
+#About-right{
+    flex: 1;
+    margin: 0px;
+    height: 300px;
+    padding-top: 50px;
+}
+
+#About-right img{
+    height: 200px;
+    width: 200px;
+}
+
+/*Contains Blog part of the page*/
 #Blog {
     background-color: rgb(17, 119, 208);
     height: 600px;
@@ -112,8 +157,4 @@ body::-webkit-scrollbar {
     background-color:burlywood;
     height: 600px;
     width: 100%;
-}
-
-.title{
-    
 }
