--- a/css/homeelements.css
+++ b/css/homeelements.css
@@ -1,9 +1,10 @@
+
 * {box-sizing:border-box}
 
 /* Slideshow container */
 .slideshow{
-  max-width: 1000px;
-  max-height: 400px;
+  max-width: 100%;
+  max-height: 100%;
   position: relative;
   margin: auto;
 }
@@ -14,33 +15,6 @@
 }
 .slide1{
     display: block;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
 }
 
 /* Caption slide-text */
