--- a/css/homeelements.css
+++ b/css/homeelements.css
@@ -1,61 +1,14 @@
-
-* {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow{
-  max-width: 100%;
-  max-height: 100%;
-  position: relative;
-  margin: auto;
+/* Style the video: 100% width and height to cover the entire window */
+#myVideo {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: fill;
 }
 
-/* Hide the images by default */
-.slide{
-  display: none;
-}
-.slide1{
-    display: block;
-}
-
-/* Caption slide-text */
-.slide-text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/*Slide image edits*/
-.slide-image{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: flex;
-  justify-content: center;
-}
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+#About-bg-video{
+    margin-top: 60px;
+    padding-top: 60px;
 }
