--- a/css/styles.css
+++ b/css/styles.css
@@ -77,40 +77,16 @@ body::-webkit-scrollbar {
     flex-direction: row;
     flex-wrap: wrap;
     background: black;
-    scroll-snap-type: mandatory;
-
-}
-
-#Content > div {
-    scroll-margin: 60px 100px;
-}
-
-
-.titles{
-    font-size: larger;
-    font-weight: 600;
-}
-
-.text{
-    font-size: small;
-    padding-top: 10px;
+    scroll-snap-type: y mandatory;
+    margin-top: 60px;
 }
 
 /*About Section of the page: contains slideshow, text and image*/
 #About {
-    margin-top: 60px;
-    background-color:rgb(32, 32, 32);
+    background-color: rgb(25, 29, 32);
     height: 100%;
     width: 100%;
 }
-
-.slideshow{
-    height: 2000px;
-    width: 100%;
-    margin: 0px;
-    max-height: 3000px;
-}
-
 /*Contains Blog part of the page*/
 #Blog {
     background-color: rgb(17, 119, 208);
