AI mera job le lega :P

--- a/css/homeelements.css
+++ b/css/homeelements.css
@@ -1,14 +1,19 @@
 /* Style the video: 100% width and height to cover the entire window */
-#myVideo {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    object-fit: fill;
+#About-bg{
+    position: relative;
+    margin: 0;
+    max-width: 100%;
+    max-height: auto;
 }
 
 #About-bg-video{
-    margin-top: 60px;
-    padding-top: 60px;
+    position: relative;
+    z-index: 1;
+}
+
+#myVideo {
+    position: absolute;
+    margin: 0;
+    width: 100%;
+    height: auto;
 }
