--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 html {
     scroll-behavior: smooth;
     height: 100%;
+    scroll-padding-top: 60px;
 }
 
 body {
@@ -34,6 +35,7 @@ body::-webkit-scrollbar {
     font-weight: 600;
     font-size: large;
     overflow: hidden;
+    z-index: 10;
 }
 
 .logo{
@@ -77,13 +79,13 @@ body::-webkit-scrollbar {
     flex-direction: row;
     flex-wrap: wrap;
     background: black;
-    scroll-snap-type: y mandatory;
+    scroll-snap-type: mandatory;
     margin-top: 60px;
 }
 
 /*About Section of the page: contains slideshow, text and image*/
-#About {
-    background-color: rgb(25, 29, 32);
+#About{
+    background-color: rgb(27, 27, 27);
     height: 100%;
     width: 100%;
 }
@@ -92,6 +94,7 @@ body::-webkit-scrollbar {
     background-color: rgb(17, 119, 208);
     height: 600px;
     width: 100%;
+    margin-top: 260px;
 }
 
 #Newsletter {
