--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ body::-webkit-scrollbar {
 #Blog {
     position: relative;
     top: 90vh;
-    background-color: rgb(17, 119, 208);
+    background-color: rgb(175, 175, 175);
     height: 600px;
     width: 100%;
     margin-top: 260px;
@@ -102,14 +102,14 @@ body::-webkit-scrollbar {
 #Newsletter {
     position: relative;
     top: 90vh;
-    background-color: aliceblue;
-    height: 600px;
+    background-color: rgb(135, 88, 88);
+    height: 50vh;
     width: 100%;
+    color: white;
 }
 
 #Partners {
     position: relative;
-    top: 90vh;
     background-color:antiquewhite;
     height: 600px;
     width: 100%;
@@ -117,7 +117,6 @@ body::-webkit-scrollbar {
 
 #Contact {
     position: relative;
-    top: 90vh;
     background-color:burlywood;
     height: 600px;
     width: 100%;
