--- a/css/homeelements.css
+++ b/css/homeelements.css
@@ -54,6 +54,8 @@
 
 #Newsletter-content {
   padding: 20px;                                      /* Add padding to the newsletter content */
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
 }
 
 #Newsletter-buttons {
@@ -75,6 +77,8 @@
 #Newsletter-right {
   padding: 20px;                                      /* Add padding to the right section of the newsletter */
   flex: 0.2;                                          /* Set the flex property of the right section to 0.2 */
+  border-radius: 5px;                                 /* Apply border-radius to the right section */
+  margin: auto;                                       /* Set the margin of the right section to auto */
 }
 
 /* Styling for the flip cards in the newsletter section */
@@ -116,4 +120,24 @@
   background-color: rgb(158, 0, 220);                 /* Set the background color of the back side */
   color: white;                                       /* Set the text color of the back side */
   transform: rotateY(180deg);                           /* Apply 3D rotation to display the back side */
+}
+
+/*styling for read more button*/
+.c-btn{
+  border: none;
+  background-color: orange;
+  padding: 12px 48px 12px 24px;
+  border-radius: 4px;
+  color: #fff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='7.41' height='12' viewBox='0 0 7.41 12'%3E%3Cpath d='M10,6,8.59,7.41,13.17,12,8.59,16.59,10,18l6-6Z' transform='translate(-8.59 -6)' fill='%23fff'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 24px center;
+  margin: auto;
+  font-weight: 100;
+}
+
+.c-btn:hover{
+  background-color: #ff8c00;
+  cursor: pointer;
+  font-weight: 500;
 }
