--- a/css/blog.css
+++ b/css/blog.css
@@ -9,3 +9,22 @@
 #Blog-right{
     flex: 0.7;
 }
+
+#Blog-home{
+    margin-top: 60px;
+}
+
+.Blog-title{
+    font-size: 20px;
+    color: white;
+    font-weight: 600;
+    padding: 0px;
+    padding-left: 30px;
+}
+
+h1{
+    color: white;
+    padding: 10px;
+    font-size: 40px;
+    padding-bottom: 0px;
+}
