--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@
     margin: 0px;                                        /* Remove margin from the body */
     font-family: Poppins;                               /* Use the custom Poppins font for the body text */
     height: 100%;                                       /* Set the height of the body to 100% */
+
   }
   
   /* Hide the scrollbar for webkit-based browsers */
@@ -29,8 +30,9 @@
   /* Styling for the navigation bar */
   .nav {
     display: flex;                                      /* Display the navigation bar as a flex container */
-    flex-direction: column;                             /* Set the flex direction to column */
+    flex-direction: row;                                /* Set the flex direction to column */
     flex-wrap: wrap;                                    /* Enable wrapping of flex items */
+    justify-content: space-between;
     background: white;                                /* Set the background color of the navigation bar to white */
     position: fixed;                                    /* Position the navigation bar as fixed */
     height: 60px;                                       /* Set the height of the navigation bar to 60 pixels */
@@ -40,6 +42,51 @@
     font-size: large;                                   /* Set the font size of the navigation bar text to large */
     overflow: hidden;                                   /* Hide any overflowing content in the navigation bar */
     z-index: 10;                                        /* Set the z-index of the navigation bar to 10 */
+  }
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+
+  }
+  .change .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+  }
+  
+  .change .bar2 {opacity: 0;}
+  
+  .change .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
+  }
+  .hamburger{
+    display: none;
+    margin: 10px 10px auto auto;
+  }
+
+  @media screen and (max-width: 767px){
+    .menu{
+      display: none;
+
+    }
+    .menu.show{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+    .menu-item{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+    .nav.show{
+      height: auto;
+
+    }
+    .hamburger{
+      display: block;
+    }
   }
   
   .logo {
