--- a/css/blog.css
+++ b/css/blog.css
@@ -15,8 +15,8 @@
   font-weight: 700;
 }
 
-.Blog {
-    position: absolute;                                 /* Set the position of the content section within the background */
+.Blog-top {
+    position: relative;                                 /* Set the position of the content section within the background */
     top: 0;                                             /* Position the content section at the top */
     left: 0;                                            /* Position the content section at the left */
     width: 100%;                                        /* Set the width of the content section to 100% */
@@ -49,6 +49,41 @@
     width: auto;
     }
 
-    #more {
+    #more1 {
       display: none;
+    }
+
+    #more2 {
+      display: none;
+    }
+
+    #more3 {
+      display: none;
+    }
+
+    .Blog {
+      position: relative;                                 /* Set the position of the content section within the background */
+      top: 0;                                             /* Position the content section at the top */
+      left: 0;                                            /* Position the content section at the left */
+      width: 100%;                                        /* Set the width of the content section to 100% */
+      background-color: rgba(0, 0, 0, 0.8);             /* Set the background color of the content section with opacity */
+      z-index: 3;                                         /* Set the z-index of the content section to 3 */
+      color: white;                                     /* Set the text color of the content section to white */
+      padding-left: calc(20/1536 *100%);                                      /* Add padding to the content section */
+      transition: opacity 0.5s;                           /* Apply transition effect to the opacity property */
+      display: flex;                                      /* Display the content section as a flex container */
+    }
+
+    .btn{
+      background: #1f80e0;
+      height: 25px;
+      padding: 0 10px;
+      color: #fff;
+      border-radius: 5px;
+      border: none;
+      outline: none;
+      text-transform: uppercase;
+      font-weight: 300;
+      font-size: 12px;
+      margin: 0 10px;
     }
