--- a/css/homeelements.css
+++ b/css/homeelements.css
@@ -39,8 +39,9 @@
 #About-left {
   flex: 1;                                            /* Set the flex property of the left section to 1 */
   padding-left: 100px;                                /* Add left padding to the left section */
-  padding-top: 15vh;                                  /* Add top padding to the left section */
+  padding-top: 5%;                                  /* Add top padding to the left section */
   padding-left: 25vh;                                 /* Additional left padding for the left section */
+  padding-bottom: 5%;
 }
 
 #About-right {
@@ -50,7 +51,7 @@
 }
 
 #About-right > img {
-  height: 50vh;                                       /* Set the height of the image within the right section */
+  height: 100%;                                       /* Set the height of the image within the right section */
   width: auto;                                        /* Set the width of the image within the right section to auto */
 }
 
