--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,6 @@
     display: flex;                                      /* Display the navigation bar as a flex container */
     flex-direction: row;                                /* Set the flex direction to column */
     flex-wrap: wrap;                                    /* Enable wrapping of flex items */
-    justify-content: space-between;
     background: white;                                /* Set the background color of the navigation bar to white */
     position: fixed;                                    /* Position the navigation bar as fixed */
     height: 60px;                                       /* Set the height of the navigation bar to 60 pixels */
@@ -37,7 +36,7 @@
     font-weight: 600;                                   /* Set the font weight of the navigation bar text to 600 */
     font-size: large;                                   /* Set the font size of the navigation bar text to large */
     overflow: hidden;                                   /* Hide any overflowing content in the navigation bar */
-    z-index: 10;                                        /* Set the z-index of the navigation bar to 10 */
+    z-index: 30;                                        /* Set the z-index of the navigation bar to 10 */
   }
   .bar1, .bar2, .bar3 {
     width: 35px;
@@ -100,6 +99,7 @@
     max-width: 1000px;                                  /* Set the maximum width of the menu container to 1000 pixels */
     margin: auto;                                       /* Center align the menu container */
     padding-top: 15px;                                  /* Add top padding to the menu container */
+    padding-left: 20%;
   }
   
   .menu-items {
@@ -143,19 +143,17 @@
   }
   
   /* Styling for the blog section of the page */
-  #Blog {
-    position: relative;                                 /* Position the blog section relative to its normal position */
-    top: 90vh;                                          /* Position the blog section 90% of the viewport height from the top */
+  #Work {
+    position: relative;                                 /* Position the blog section relative to its normal position */  
     background-color: rgb(175, 175, 175);             /* Set the background color of the blog section */
     height: 600px;                                      /* Set the height of the blog section to 600 pixels */
     width: 100%;                                        /* Set the width of the blog section to 100% */
-    margin-top: 260px;                                  /* Add top margin to the blog section to avoid overlapping with other content */
+    display: flex;
   }
   
   /* Styling for the newsletter section of the page */
-  #Newsletter {
+  #Testimony {
     position: relative;                                 /* Position the newsletter section relative to its normal position */
-    top: 90vh;                                          /* Position the newsletter section 90% of the viewport height from the top */
     background-color: rgb(135, 88, 88);               /* Set the background color of the newsletter section */
     height: 50vh;                                       /* Set the height of the newsletter section to 50% of the viewport height */
     width: 100%;                                        /* Set the width of the newsletter section to 100% */
