--- a/css/homeelements.css
+++ b/css/homeelements.css
@@ -16,7 +16,7 @@
 #myVideo {
   position: absole;                                 /* Set the position of the video element */
   margin: 0;                                          /* Remove margin from the video element */
-  width: 100%;                                        /* Set the width of the video element to 100% */
+  width: 100vw;                                        /* Set the width of the video element to 100% */
   height: auto;                                       /* Set the height of the video element to auto */
   
 }
