--- a/css/team.css
+++ b/css/team.css
@@ -32,7 +32,29 @@ body {
     /* width: 100%; */
     width: 150px;
     height: 250px;
-    background-color: #625F63;
+    background-color: white;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.24);
+    border: 2px solid rgba(7, 7, 7, 0.12);
+    font-size: 16px;   
+    transition: all 0.3s ease;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    text-decoration: none;
+    margin: 25px;
+}
+
+.cardtext {
+    /* width: 100%; */
+    width: 150px;
+    height: 250px;
+    background-color: white;
     margin: 10px;
     border-radius: 10px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.24);
@@ -48,20 +70,25 @@ body {
     transition: all 0.3s ease;
     text-decoration: none;
 }
-.icon {
-    margin: 0 auto;
-    width: 100%;
-    height: 80px;
-    max-width:80px;
-    background: linear-gradient(90deg, #525360 0%, #8582b1 40%, rgba(0, 0, 0, 0.28) 60%);
-    border-radius: 100%;
+
+.cardimg {
+    /* width: 100%; */
+    width: 150px;
+    height: 250px;
+    background-color: #625F63;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.24);
+    border: 2px solid rgba(7, 7, 7, 0.12);
+    font-size: 16px;   
+    transition: all 0.3s ease;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
-    transition: all 0.8s ease;
-    background-position: 0px;
-    background-size: 200px;
+    flex-direction: column;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    text-decoration: none;
 }
 
 .card .title {
@@ -69,7 +96,7 @@ body {
     margin: 0;
     text-align: center;
     margin-top: 30px;
-    color: white;
+    color: black;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -81,7 +108,7 @@ body {
     font-size: 13px;
     text-align: center;
     margin-top: 20px;
-    color: white;
+    color: black;
     font-weight: 200;
     letter-spacing: 2px;
     opacity: 0;
@@ -92,23 +119,8 @@ body {
 .card:hover {
     height: 270px;
 }
-.card:hover .info {
-    height: 90%;
-}
 .card:hover .text {
     transition: all 0.3s ease;
     opacity: 1;
     max-height:40px;
-}
-.card:hover .icon {
-    background-position: -120px;
-    transition: all 0.3s ease;
-}
-.card:hover .icon i {
-    background: linear-gradient(90deg, #525360, #8582b1);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    opacity: 1;
-    transition: all 0.3s ease;
 }
